remove module-info.java, remove build.gradle workaround