@@ -19,9 +19,7 @@ tasks.withType(JavaCompile) {
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
 }
-test {
-    jvmArgs =["--add-reads","kprog.main=org.testfx.junit","--add-exports","javafx.graphics/com.sun.javafx.application=org.testfx"]
-}
+
 javafx {
     version = "17.0.2"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
